--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,12 @@ h1, h2, h3, h4, h5, h6 {
     color: #e50914;
     text-align: center;
 }
+
+.quiz-container {
+  background-color: #111;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
+  padding: 30px;
+  max-width: 600px;
+  width: 100%;
+}
