--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,18 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+/* Hides the element visually but keeps it accessible to screen readers */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: #e50914;
     text-align: center;
