--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,3 +109,11 @@ h1, h2, h3, h4, h5, h6 {
 .hide {
   display: none;
 }
+
+.bg-wallpaper {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    image-rendering: auto;
+}
