--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,10 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.progress-bar {
+    width: 0%;
+}
+
 .progress-bar.bg-danger {
   background-color: #dc3545 !important;
 }
