--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,9 +162,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Apply arcade font to leaderboard headings */
-.quiz-header h1,
 #leaderboard h2 {
   font-family: 'Press Start 2P', cursive;
+  text-align: center;
+}
+
+#home-intro h1,
+#rules .quiz-header h1,
+#quiz .quiz-header h1 {
+  font-family: 'Poppins', sans-serif;
+  color: white;
   text-align: center;
 }
 
